RESOLVED FIXED59421
Fix strict OwnPtr violations and whitelist known-tricky files
https://bugs.webkit.org/show_bug.cgi?id=59421
Summary Fix strict OwnPtr violations and whitelist known-tricky files
Adam Barth
Reported 2011-04-25 23:16:23 PDT
Fix strict OwnPtr violations and whitelist known-tricky files
Attachments
Patch (5.10 KB, patch)
2011-04-25 23:16 PDT, Adam Barth
levin: review+
Adam Barth
Comment 1 2011-04-25 23:16:55 PDT
Adam Barth
Comment 2 2011-04-25 23:22:07 PDT
Note You need to log in before you can comment on or make changes to this bug.