2011-04-25  Adam Barth  <abarth@webkit.org>

Reviewed by David Levin.

        Fix strict OwnPtr violations and whitelist known-tricky files
        https://bugs.webkit.org/show_bug.cgi?id=59421

        With this patch, WebCore builds cleanly with strict OwnPtrs.

        * dom/MessagePort.cpp:
        (WebCore::MessagePort::MessagePort):
        * dom/XMLDocumentParserLibxml2.cpp:
        * page/ContextMenuController.cpp:
        (WebCore::ContextMenuController::ContextMenuController):
        (WebCore::ContextMenuController::clearContextMenu):
        * page/PluginHalter.cpp:
        * platform/graphics/MediaPlayer.cpp:
        * platform/network/ResourceRequestBase.cpp:
        (WebCore::ResourceRequestBase::adopt):
        (WebCore::ResourceRequestBase::copyData):
        * svg/SVGDocumentExtensions.cpp:


Canonical link: https://commits.webkit.org/74603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84881 268f45cc-cd09-0410-ab3c-d52691b4dbfc