Source/WebCore/dom/XMLDocumentParserLibxml2.cpp
@@ -25,6 +25,10 @@
  */
 
 #include "config.h"
+
+// FIXME: Remove this define!
+#define LOOSE_OWN_PTR
+
 #include "XMLDocumentParser.h"
 
 #include "CDATASection.h"
