Source/WebCore/platform/graphics/MediaPlayer.cpp
@@ -25,6 +25,9 @@
 
 #include "config.h"
 
+// FIXME: Remove this define!
+#define LOOSE_OWN_PTR
+
 #if ENABLE(VIDEO)
 #include "MediaPlayer.h"
 
